// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login component should renders a snapshot of the app component 1`] = `
<div
  className="card border-0"
>
  <div>
    <small
      className="form-text login-label"
    >
      Welcome to Authors Haven
    </small>
  </div>
  <div
    className="card-body"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="form-row"
      >
        <div
          className="form-group col-md-12"
        >
          <TextField
            className="username"
            field="username"
            label="username"
            onChange={[Function]}
            placeholder="username"
            type="text"
            value=""
          />
        </div>
        <div
          className="form-group col-md-12"
        >
          <TextField
            className="password"
            field="password"
            label="password"
            onChange={[Function]}
            placeholder="password"
            type="password"
            value=""
          />
        </div>
      </div>
      <div
        className="form-row"
      >
        <div
          className="form-group col-md-12"
        >
          <button
            className="btn login-btn submit"
            onClick={[Function]}
            type="submit"
          >
            SIGN IN
          </button>
          <div
            className="mt-4"
          >
            <Link
              className="form-text text-danger"
              onClick={[Function]}
              replace={false}
              to="/users/request-password-reset"
            >
              Forgot your password?
            </Link>
          </div>
        </div>
      </div>
      <hr />
      <div>
        <small
          className="form-text"
        >
          sign in with one of these services
        </small>
        <br />
      </div>
    </form>
    <SocialLogin />
  </div>
</div>
`;

exports[`Login component should return error for invalid form submission 1`] = `
<div
  className="card border-0"
>
  <div>
    <small
      className="form-text login-label"
    >
      Welcome to Authors Haven
    </small>
  </div>
  <div
    className="card-body"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="form-row"
      >
        <div
          className="form-group col-md-12"
        >
          <TextField
            className="username"
            error={
              Array [
                "This username is a required field.",
              ]
            }
            field="username"
            label="username"
            onChange={[Function]}
            placeholder="username"
            type="text"
            value=""
          />
        </div>
        <div
          className="form-group col-md-12"
        >
          <TextField
            className="password"
            error={
              Array [
                "This password is a required field.",
              ]
            }
            field="password"
            label="password"
            onChange={[Function]}
            placeholder="password"
            type="password"
            value=""
          />
        </div>
      </div>
      <div
        className="form-row"
      >
        <div
          className="form-group col-md-12"
        >
          <button
            className="btn login-btn submit"
            onClick={[Function]}
            type="submit"
          >
            SIGN IN
          </button>
          <div
            className="mt-4"
          >
            <Link
              className="form-text text-danger"
              onClick={[Function]}
              replace={false}
              to="/users/request-password-reset"
            >
              Forgot your password?
            </Link>
          </div>
        </div>
      </div>
      <hr />
      <div>
        <small
          className="form-text"
        >
          sign in with one of these services
        </small>
        <br />
      </div>
    </form>
    <SocialLogin />
  </div>
</div>
`;
